<resources>
    <string name="app_name">Foodictive</string>
    <string name="galery">Galery</string>
    <string name="captionTv">Welcome to Google Sign In</string>
    <string name="default_web_client_id">140843403728-tif3587jqiilt4ut5p6gsrd9vrl9r0db.apps.googleusercontent.com</string>
    <string name="deskripsi">Description</string>
    <string name="nama_makanan">Food Name</string>
    <string name="bahan_bahan">Ingredient</string>
    <string name="cara_memasak">How to cook</string>
    <string name="location">location</string>
    <string name="identifikasi">Identify</string>
    <string name="halaman_detail">Get Started</string>
    <string name="login">Login</string>
    <string name="icon">Foodictive</string>
    <string name="email_inv">Email is Invalid</string>
    <string name="pass_inv">Password Must be 6 Character Or More</string>
    <string name="register">Register</string>
    <string name="txt_pass">Password</string>
    <string name="txt_email">Email</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="btn_back">Back</string>
    <string name="username">Username</string>
</resources>