<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Cstm"
    android:paddingHorizontal="32dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_back_register"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="104dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/btn_back"
        android:focusable="true"
        android:src="@drawable/ic_btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:SpinKit_Color="@color/black"
        app:SpinKit_Style="FadingCircle"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.foodictive.customview.AllEditText
        android:id="@+id/edit_email_register"
        android:layout_width="270dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edit_name_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_name_register"
        app:layout_constraintTop_toBottomOf="@+id/edit_name_register"
        custom:email="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <com.example.foodictive.customview.AllButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_cstm_bg"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_password_register"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/edit_password_register"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_register" />

    <com.example.foodictive.customview.AllEditText
        android:id="@+id/edit_name_register"
        android:layout_width="270dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/person_ic"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/food_logo"
        android:transitionName="logoLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.foodictive.customview.AllEditText
        android:id="@+id/edit_password_register"
        android:layout_width="270dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:hint="@string/txt_pass"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edit_email_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_email_register"
        app:layout_constraintTop_toBottomOf="@id/edit_email_register"
        custom:password="true" />


</androidx.constraintlayout.widget.ConstraintLayout>