<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailMakanan">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:background="@drawable/button_cstm_outline2"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_baseline_image_24"
                android:layout_gravity="center"
                android:foregroundGravity="center"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/add_galery"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            style="@style/CardView.Light"
            android:backgroundTint="@color/Cstm2"
            android:text="@string/galery"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/nama_makanan"
            app:layout_constraintEnd_toStartOf="@+id/identifikasi"
            app:layout_constraintHorizontal_bias="0.344"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/identifikasi"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/identifikasi"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/identifikasi"
            style="@style/CardView.Light"
            android:textColor="@color/white"
            android:backgroundTint="@color/Cstm2"
            app:layout_constraintBottom_toTopOf="@+id/nama_makanan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/nama_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:background="@drawable/button_cstm_bg"
            android:text="@string/nama_makanan"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/identifikasi" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_cstm_bg"
            android:textColor="@color/white"
            android:text="@string/deskripsi"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nama_makanan" />

        <TextView
            android:id="@+id/desc_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_cstm_outline"
            android:text="@string/deskripsi"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc" />

        <TextView
            android:id="@+id/bahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/bahan_bahan"
            android:background="@drawable/button_cstm_bg"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_makanan" />

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/bahan_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_cstm_outline"
            android:layout_marginStart="4dp"
            android:textColor="@color/black"
            android:text="@string/bahan_bahan"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bahan" />

        <TextView
            android:id="@+id/cara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:background="@drawable/button_cstm_bg"
            android:text="@string/cara_memasak"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bahan_makanan" />

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/cara_masak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_cstm_outline"
            android:textColor="@color/black"
            android:text="@string/cara_memasak"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cara" />

        <Button
            android:id="@+id/show_map"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Cstm2"
            android:textColor="@color/white"
            android:text="@string/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cara_masak" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/tambah_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_alt"
            android:backgroundTint="@color/Cstm2"
            app:layout_constraintBottom_toBottomOf="@+id/show_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/show_map"
            android:contentDescription="tambah" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>